--- a/DietCalculator.vcxproj.filters
+++ b/DietCalculator.vcxproj.filters
@@ -30,26 +30,26 @@
     <ClCompile Include="dataBase\sqlite3.c">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="include\imgui.cpp">
-      <Filter>Pliki źródłowe\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="include\imgui_demo.cpp">
-      <Filter>Pliki źródłowe\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="include\imgui_draw.cpp">
-      <Filter>Pliki źródłowe\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="include\imgui_tables.cpp">
-      <Filter>Pliki źródłowe\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="include\imgui_widgets.cpp">
-      <Filter>Pliki źródłowe\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="include\imgui-SFML.cpp">
-      <Filter>Pliki źródłowe\imgui</Filter>
-    </ClCompile>
     <ClCompile Include="dataBase.cpp">
       <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+    <ClCompile Include="imGui\imgui.cpp">
+      <Filter>Pliki źródłowe\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imGui\imgui_demo.cpp">
+      <Filter>Pliki źródłowe\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imGui\imgui_draw.cpp">
+      <Filter>Pliki źródłowe\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imGui\imgui_tables.cpp">
+      <Filter>Pliki źródłowe\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imGui\imgui_widgets.cpp">
+      <Filter>Pliki źródłowe\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imGui\imgui-SFML.cpp">
+      <Filter>Pliki źródłowe\imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -62,31 +62,31 @@
     <ClInclude Include="dataBase\sqlite3.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="include\imconfig.h">
+    <ClInclude Include="imGui\imconfig.h">
       <Filter>Pliki nagłówkowe\imgui</Filter>
     </ClInclude>
-    <ClInclude Include="include\imconfig-SFML.h">
+    <ClInclude Include="imGui\imconfig-SFML.h">
       <Filter>Pliki nagłówkowe\imgui</Filter>
     </ClInclude>
-    <ClInclude Include="include\imgui.h">
+    <ClInclude Include="imGui\imgui.h">
       <Filter>Pliki nagłówkowe\imgui</Filter>
     </ClInclude>
-    <ClInclude Include="include\imgui_internal.h">
+    <ClInclude Include="imGui\imgui_internal.h">
       <Filter>Pliki nagłówkowe\imgui</Filter>
     </ClInclude>
-    <ClInclude Include="include\imgui-SFML.h">
+    <ClInclude Include="imGui\imgui-SFML.h">
       <Filter>Pliki nagłówkowe\imgui</Filter>
     </ClInclude>
-    <ClInclude Include="include\imgui-SFML_export.h">
+    <ClInclude Include="imGui\imgui-SFML_export.h">
       <Filter>Pliki nagłówkowe\imgui</Filter>
     </ClInclude>
-    <ClInclude Include="include\imstb_rectpack.h">
+    <ClInclude Include="imGui\imstb_rectpack.h">
       <Filter>Pliki nagłówkowe\imgui</Filter>
     </ClInclude>
-    <ClInclude Include="include\imstb_textedit.h">
+    <ClInclude Include="imGui\imstb_textedit.h">
       <Filter>Pliki nagłówkowe\imgui</Filter>
     </ClInclude>
-    <ClInclude Include="include\imstb_truetype.h">
+    <ClInclude Include="imGui\imstb_truetype.h">
       <Filter>Pliki nagłówkowe\imgui</Filter>
     </ClInclude>
   </ItemGroup>
