--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,17 @@ Size=420,325
 Collapsed=0
 
 [Window][Menu]
-Pos=266,65
+Pos=533,136
 Size=614,529
+Collapsed=0
+
+[Window][test]
+Pos=60,60
+Size=463,515
+Collapsed=0
+
+[Window][Window A]
+Pos=60,60
+Size=128,48
 Collapsed=0
 
