created new buttons

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=60,102
+Size=400,358
 Collapsed=0
 
 [Window][Hello, world!]
@@ -9,17 +9,22 @@ Size=420,325
 Collapsed=0
 
 [Window][Menu]
-Pos=533,136
-Size=614,529
+Pos=49,37
+Size=2947,1922
 Collapsed=0
 
 [Window][test]
-Pos=60,60
+Pos=626,259
 Size=463,515
 Collapsed=0
 
 [Window][Window A]
 Pos=60,60
 Size=128,48
+Collapsed=0
+
+[Window][Add new record]
+Pos=60,60
+Size=729,432
 Collapsed=0
 
