--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=420,325
 Collapsed=0
 
 [Window][Menu]
-Pos=49,37
-Size=2947,1922
+Pos=49,-4
+Size=1900,900
 Collapsed=0
 
 [Window][test]
@@ -25,11 +25,21 @@ Collapsed=0
 
 [Window][Add new record]
 Pos=60,60
-Size=1118,319
+Size=1900,900
 Collapsed=0
 
 [Window][Data Base]
 Pos=60,60
-Size=1453,768
+Size=1900,900
+Collapsed=0
+
+[Window][ ]
+Pos=60,60
+Size=1900,900
+Collapsed=0
+
+[Window][Count Diet]
+Pos=60,60
+Size=1900,900
 Collapsed=0
 
